--- a/attestation/full-disk-encryption/tools/image/scripts/install
+++ b/attestation/full-disk-encryption/tools/image/scripts/install
@@ -32,7 +32,7 @@ apt update && yes | DEBIAN_FRONTEND=noninteractive apt install -y  kobuk-tdx-gue
 grub-install --target=x86_64-efi --efi-directory=/boot/efi --bootloader-id=ubuntu
 echo "Before calling CMDLINE"
 # Configure kernel command line
-CMDLINE="cryptdevice=UUID=$(blkid -o value -s UUID $ROOT):rootfs-enc console=hvc0"
+CMDLINE="cryptdevice=UUID=$(blkid -o value -s UUID $ROOT):rootfs-enc-dev console=hvc0"
 sed -i -e "/GRUB_CMDLINE_LINUX_DEFAULT=/ s/=.*/=\"$CMDLINE\"/" \
     /etc/default/grub.d/50-cloudimg-settings.cfg
 
